--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile dist/server ./src/index.ts",
     "start": "bun src/index.ts",
     "dev": "nodemon",
     "lint": "eslint . --ext .js,.ts",
